@@ -1,10 +1,0 @@
-
-AjLanguage To do list
-
-- IExpression
-- BinaryExpression
-- BindingEnvironment
-- ICommand
-- SetVariableCommand
-
-- 1000 things... :-)
